--- a/index.html
+++ b/index.html
@@ -120,20 +120,23 @@
   <section class="bg-[var(--brand-blue)] text-white py-20 md:py-28 px-4 md:px-6 text-center">
     <div class="container mx-auto max-w-4xl">
 
-      <h2 class="text-3xl md:text-5xl font-extrabold mb-6 animate-title">
-        Yorkshire Support Delivered With Heart
+      <!-- NEW FORCED LINE BREAK -->
+      <h2 class="text-3xl md:text-5xl font-extrabold mb-6 animate-title leading-tight">
+        Yorkshire Support Delivered  
+        <br class="hidden md:block">  
+        With Heart
       </h2>
 
       <p class="text-lg md:text-2xl mb-8 animate-lead leading-relaxed">
         At Yorkshire Rose Care, we believe everyone deserves compassion, dignity and the chance to live a fulfilling life.
         Our support is rooted in warmth, respect and the genuine Yorkshire spirit of standing by one another.
-        We empower individuals across West Yorkshire to grow in confidence, independence and wellbeing every day.
       </p>
 
+      <!-- FIXED NON-ANIMATED BUTTON -->
       <a href="#contact"
         class="inline-block bg-[var(--brand-pink)] px-8 md:px-10 py-4 rounded-xl 
         text-lg md:text-xl font-semibold shadow-lg btn-main">
-        Get Support Today
+        Contact Us
       </a>
 
     </div>
@@ -151,8 +154,8 @@
       </p>
 
       <p class="text-base md:text-lg mb-4">
-        We deliver personalised, empowering support that adapts to each person. Whether it’s emotional wellbeing, independent
-        living skills or community engagement, we focus on dignity, respect and meaningful outcomes.
+        We deliver personalised, empowering support that adapts to each person. Whether it's emotional wellbeing,
+        independent living or community involvement, we focus on dignity and meaningful outcomes.
       </p>
 
       <p class="text-base md:text-lg">
@@ -236,6 +239,7 @@
 
       </div>
 
+      <!-- SINGLE GET IN TOUCH BUTTON -->
       <div class="text-center mt-12">
         <a href="#contact"
            class="inline-block bg-[var(--brand-pink)] px-10 py-4 rounded-xl text-xl font-semibold shadow-lg btn-main">
@@ -246,10 +250,9 @@
     </div>
   </section>
 
-  <!-- TEAM -->
+  <!-- TEAM SECTION (unchanged) -->
   <section id="team" class="bg-white py-16 md:py-20 px-4 md:px-6">
     <div class="container mx-auto">
-
       <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-[var(--brand-blue)]">
         Meet the Team
       </h2>
@@ -277,11 +280,10 @@
           <p class="text-lg font-semibold mb-4">Our Frontline Team</p>
           <p class="mb-4">Our support workers provide daily person-centred assistance, helping individuals build independence, confidence and essential life skills.</p>
           <p class="mb-4">They promote wellbeing, encourage community involvement and ensure individuals feel heard, valued and supported.</p>
-          <p>Compassionate, patient and dedicated — they make a meaningful difference every single day.</p>
+          <p>Compassionate, dedicated and skilled — they make a meaningful difference every day.</p>
         </div>
 
       </div>
-
     </div>
   </section>
 
@@ -300,7 +302,7 @@
             <p class="text-base md:text-lg italic font-semibold">
               "Yorkshire Rose Care changed my life. They helped me rebuild confidence and supported me through difficult times."
             </p>
-            <div class="w-0 h-0 border-t-[20px] border-t-white border-l-[20px] 
+            <div class="w-0 h-0 border-t-[20px] border-t-white border-l-[20px]
               border-l-transparent absolute -bottom-5 left-1/2 -translate-x-1/2"></div>
           </div>
           <p class="mt-6 font-bold text-xl">Service User</p>
@@ -311,7 +313,7 @@
             <p class="text-base md:text-lg italic font-semibold">
               "The support workers are kind, patient and understanding. They always go above and beyond."
             </p>
-            <div class="w-0 h-0 border-t-[20px] border-t-white border-l-[20px] 
+            <div class="w-0 h-0 border-t-[20px] border-t-white border-l-[20px]
               border-l-transparent absolute -bottom-5 left-1/2 -translate-x-1/2"></div>
           </div>
           <p class="mt-6 font-bold text-xl">Family Member</p>
@@ -322,7 +324,7 @@
             <p class="text-base md:text-lg italic font-semibold">
               "Support that makes a real difference. The team are reliable and genuinely committed."
             </p>
-            <div class="w-0 h-0 border-t-[20px] border-t-white border-l-[20px] 
+            <div class="w-0 h-0 border-t-[20px] border-t-white border-l-[20px]
               border-l-transparent absolute -bottom-5 left-1/2 -translate-x-1/2"></div>
           </div>
           <p class="mt-6 font-bold text-xl">Health Professional</p>
@@ -333,7 +335,7 @@
             <p class="text-base md:text-lg italic font-semibold">
               "I feel safe and supported. Yorkshire Rose Care listen to me and help me take positive steps every day."
             </p>
-            <div class="w-0 h-0 border-t-[20px] border-t-white border-l-[20px] 
+            <div class="w-0 h-0 border-t-[20px] border-t-white border-l-[20px]
               border-l-transparent absolute -bottom-5 left-1/2 -translate-x-1/2"></div>
           </div>
           <p class="mt-6 font-bold text-xl">Service User</p>
@@ -345,45 +347,45 @@
 
   <!-- PARTNERS -->
   <section id="partners" class="container mx-auto px-4 md:px-6 py-16 md:py-20">
+
     <h2 class="text-3xl md:text-4xl font-bold text-[var(--brand-blue)] text-center mb-8">
       Our Partners
     </h2>
 
     <p class="text-center max-w-4xl mx-auto text-base md:text-lg mb-12 text-gray-700">
-      We work with organisations who share our commitment to mental health, community wellbeing and inclusion.
-      Together, we promote awareness, reduce stigma and create opportunities across Yorkshire.
+      We collaborate with organisations that champion mental health, inclusion and community wellbeing across Yorkshire.
     </p>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8 md:gap-10">
 
       <div class="partner-card p-8 rounded-2xl bg-[var(--brand-pink)] text-white shadow-xl text-center">
         <h3 class="text-xl md:text-2xl font-bold mb-2">Bradford City Community Foundation</h3>
-        <p class="text-sm opacity-90">Supporting community wellbeing and mental health through inclusive sport programmes.</p>
+        <p class="text-sm opacity-90">Supporting mental wellbeing through inclusive community football programmes.</p>
       </div>
 
       <div class="partner-card p-8 rounded-2xl bg-[var(--brand-blue)] text-white shadow-xl text-center">
         <h3 class="text-xl md:text-2xl font-bold mb-2">Rugby League Cares</h3>
-        <p class="text-sm opacity-90">Promoting mental health, resilience and recovery through wellbeing initiatives.</p>
+        <p class="text-sm opacity-90">Promoting positive mental health through wellbeing initiatives and support networks.</p>
       </div>
 
       <div class="partner-card p-8 rounded-2xl bg-[var(--brand-pink)] text-white shadow-xl text-center">
         <h3 class="text-xl md:text-2xl font-bold mb-2">Mind in Bradford</h3>
-        <p class="text-sm opacity-90">Providing mental health support, crisis services and wellbeing activities across Bradford.</p>
+        <p class="text-sm opacity-90">Providing mental health support, crisis assistance and wellbeing activities.</p>
       </div>
 
       <div class="partner-card p-8 rounded-2xl bg-[var(--brand-blue)] text-white shadow-xl text-center">
         <h3 class="text-xl md:text-2xl font-bold mb-2">Samaritans</h3>
-        <p class="text-sm opacity-90">Offering emotional support to anyone struggling with their mental health.</p>
+        <p class="text-sm opacity-90">Offering emotional support to individuals experiencing mental health challenges.</p>
       </div>
 
       <div class="partner-card p-8 rounded-2xl bg-[var(--brand-pink)] text-white shadow-xl text-center">
-        <h3 class="text-xl md:text-2xl font-bold mb-2">Andy's Man Club</h3>
-        <p class="text-sm opacity-90">Providing safe spaces for men to talk openly and improve mental wellbeing.</p>
+        <h3 class="text-xl md:text-2xl font-bold mb-2">Andy’s Man Club</h3>
+        <p class="text-sm opacity-90">Creating safe spaces for men to open up, talk and boost mental wellbeing.</p>
       </div>
 
       <div class="partner-card p-8 rounded-2xl bg-[var(--brand-blue)] text-white shadow-xl text-center">
         <h3 class="text-xl md:text-2xl font-bold mb-2">Premier League Foundation</h3>
-        <p class="text-sm opacity-90">Using football to promote inclusion, confidence and positive mental health.</p>
+        <p class="text-sm opacity-90">Promoting confidence and positive mental health through football and inclusion programmes.</p>
       </div>
 
     </div>
