--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       scroll-behavior: smooth;
     }
 
-    /* --- Animations --- */
+    /* Animations */
     @keyframes fadeInUp {
       0% { opacity: 0; transform: translateY(25px); }
       100% { opacity: 1; transform: translateY(0); }
@@ -68,7 +68,7 @@
   <div class="bg-[var(--brand-blue)] text-white py-2 text-center text-sm md:text-lg font-semibold">
     📞 07793 487 157 |
     <a href="mailto:info@yorkshirerosecare.co.uk" class="underline hover:text-[var(--brand-pink)]">
-      @ info@yorkshirerosecare.co.uk
+      📧 info@yorkshirerosecare.co.uk
     </a>
   </div>
 
@@ -120,19 +120,19 @@
   <section class="bg-[var(--brand-blue)] text-white py-20 md:py-28 px-4 md:px-6 text-center">
     <div class="container mx-auto max-w-4xl">
 
-      <!-- NEW FORCED LINE BREAK -->
+      <!-- Forced line break for two lines -->
       <h2 class="text-3xl md:text-5xl font-extrabold mb-6 animate-title leading-tight">
-        Yorkshire Support Delivered  
-        <br class="hidden md:block">  
-        With Heart
+        Yorkshire Support<br />
+        Delivered With Heart
       </h2>
 
       <p class="text-lg md:text-2xl mb-8 animate-lead leading-relaxed">
         At Yorkshire Rose Care, we believe everyone deserves compassion, dignity and the chance to live a fulfilling life.
         Our support is rooted in warmth, respect and the genuine Yorkshire spirit of standing by one another.
+        We empower individuals across West Yorkshire to grow in confidence, independence and wellbeing every day.
       </p>
 
-      <!-- FIXED NON-ANIMATED BUTTON -->
+      <!-- FIXED, NON-ANIMATED BUTTON -->
       <a href="#contact"
         class="inline-block bg-[var(--brand-pink)] px-8 md:px-10 py-4 rounded-xl 
         text-lg md:text-xl font-semibold shadow-lg btn-main">
@@ -154,8 +154,8 @@
       </p>
 
       <p class="text-base md:text-lg mb-4">
-        We deliver personalised, empowering support that adapts to each person. Whether it's emotional wellbeing,
-        independent living or community involvement, we focus on dignity and meaningful outcomes.
+        We deliver personalised, empowering support that adapts to each person. Whether it’s emotional wellbeing,
+        independent living skills or community engagement, we focus on dignity, respect and meaningful outcomes.
       </p>
 
       <p class="text-base md:text-lg">
@@ -201,15 +201,16 @@
 
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8 md:gap-10">
 
-        <!-- DOM CARE -->
+        <!-- DOMICILIARY CARE -->
         <div class="bg-white text-gray-900 p-6 md:p-8 rounded-2xl shadow-xl border-4 border-[var(--brand-pink)] card-float animate-fade">
           <h3 class="text-xl md:text-2xl font-bold text-[var(--brand-blue)] mb-4">Domiciliary Care</h3>
           <p class="mb-4">
             We provide personalised home support that helps people remain independent and safe. Support includes daily
-            living tasks, routines, emotional reassurance and tailored independence plans.
+            living tasks, structured routines, emotional reassurance and tailored independence plans.
           </p>
           <p>
-            Everything we do is based on dignity, respect and meaningful engagement — empowering people at every step.
+            Everything we do is based on dignity, respect and meaningful engagement — empowering people at every step
+            while working closely with families and professionals.
           </p>
         </div>
 
@@ -217,23 +218,25 @@
         <div class="bg-white text-gray-900 p-6 md:p-8 rounded-2xl shadow-xl border-4 border-[var(--brand-pink)] card-float animate-fade">
           <h3 class="text-xl md:text-2xl font-bold text-[var(--brand-blue)] mb-4">Supported Living</h3>
           <p class="mb-4">
-            Through structured and flexible support, we help individuals develop skills, build confidence and maintain
-            independence in a stable environment shaped around personal choice.
+            We help individuals develop skills, build confidence and maintain independence in a stable environment shaped
+            around personal choice and aspirations.
           </p>
           <p>
-            Our supported living ethos promotes community participation, growth and a strong sense of belonging.
+            Our supported living ethos promotes community participation, growth and a strong sense of belonging across
+            West Yorkshire.
           </p>
         </div>
 
-        <!-- SPECIALIST -->
+        <!-- SPECIALIST SUPPORT -->
         <div class="bg-white text-gray-900 p-6 md:p-8 rounded-2xl shadow-xl border-4 border-[var(--brand-pink)] card-float animate-fade">
           <h3 class="text-xl md:text-2xl font-bold text-[var(--brand-blue)] mb-4">Specialist Support</h3>
           <p class="mb-4">
-            For individuals with complex needs, our trauma-informed, person-centred approach builds resilience,
-            communication skills and emotional wellbeing.
+            For individuals with complex mental health needs or learning disabilities, our trauma-informed,
+            person-centred approach builds resilience, communication skills and emotional wellbeing.
           </p>
           <p>
-            Each support plan is personalised and strengths-focused, promoting recovery and meaningful development.
+            Each support plan is personalised and strengths-focused, promoting recovery, self-confidence and long-term
+            positive outcomes.
           </p>
         </div>
 
@@ -250,40 +253,67 @@
     </div>
   </section>
 
-  <!-- TEAM SECTION (unchanged) -->
+  <!-- TEAM -->
   <section id="team" class="bg-white py-16 md:py-20 px-4 md:px-6">
     <div class="container mx-auto">
+
       <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-[var(--brand-blue)]">
         Meet the Team
       </h2>
 
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8 md:gap-10">
 
+        <!-- ROBERT -->
         <div class="bg-[var(--brand-pink)] text-white p-6 md:p-8 rounded-2xl shadow-xl card-float animate-fade">
           <h3 class="text-2xl md:text-3xl font-bold mb-2">Robert Cranmer</h3>
           <p class="text-lg font-semibold mb-4">Director</p>
-          <p class="mb-4">Robert has over 15 years of care management experience and is recognised for his commitment to improving outcomes across the region.</p>
-          <p class="mb-4">With a strong passion for mental health, he also serves as the Designated Safeguarding Lead ensuring the highest safety standards.</p>
-          <p>A proud Bradford City fan and devoted family man, Robert brings warmth and leadership to the organisation.</p>
+          <p class="mb-4">
+            Robert has over 15 years of care management experience and is recognised for his commitment to improving outcomes
+            across the region.
+          </p>
+          <p class="mb-4">
+            With a strong passion for mental health, he also serves as the Designated Safeguarding Lead, ensuring the
+            highest safety and protection standards.
+          </p>
+          <p>
+            A proud Bradford City fan and devoted family man, Robert brings warmth, leadership and a clear vision for quality care.
+          </p>
         </div>
 
+        <!-- SALMAN -->
         <div class="bg-[var(--brand-blue)] text-white p-6 md:p-8 rounded-2xl shadow-xl card-float animate-fade">
           <h3 class="text-2xl md:text-3xl font-bold mb-2">Salman Khan</h3>
           <p class="text-lg font-semibold mb-4">Director</p>
-          <p class="mb-4">Salman is passionate about delivering outstanding care to individuals with learning disabilities, autism and mental health challenges.</p>
-          <p class="mb-4">His leadership ensures Yorkshire Rose Care remains compassionate, person-centred and community-focused.</p>
-          <p>Outside of work, Salman enjoys spending time with family and friends.</p>
+          <p class="mb-4">
+            Salman is passionate about delivering outstanding care to individuals with learning disabilities, autism and
+            mental health challenges.
+          </p>
+          <p class="mb-4">
+            His leadership ensures Yorkshire Rose Care remains compassionate, person-centred and rooted in community values.
+          </p>
+          <p>
+            Outside of work, Salman enjoys spending time with his family and friends and is known for his warm, approachable nature.
+          </p>
         </div>
 
+        <!-- SUPPORT WORKERS -->
         <div class="bg-[var(--brand-pink)] text-white p-6 md:p-8 rounded-2xl shadow-xl card-float animate-fade">
           <h3 class="text-2xl md:text-3xl font-bold mb-2">Support Workers</h3>
           <p class="text-lg font-semibold mb-4">Our Frontline Team</p>
-          <p class="mb-4">Our support workers provide daily person-centred assistance, helping individuals build independence, confidence and essential life skills.</p>
-          <p class="mb-4">They promote wellbeing, encourage community involvement and ensure individuals feel heard, valued and supported.</p>
-          <p>Compassionate, dedicated and skilled — they make a meaningful difference every day.</p>
+          <p class="mb-4">
+            Our support workers provide daily person-centred assistance, helping individuals build independence, confidence
+            and essential life skills.
+          </p>
+          <p class="mb-4">
+            They promote wellbeing, encourage community involvement and ensure individuals feel heard, valued and respected.
+          </p>
+          <p>
+            Compassionate, patient and dedicated — they make a meaningful difference every single day.
+          </p>
         </div>
 
       </div>
+
     </div>
   </section>
 
@@ -302,8 +332,6 @@
             <p class="text-base md:text-lg italic font-semibold">
               "Yorkshire Rose Care changed my life. They helped me rebuild confidence and supported me through difficult times."
             </p>
-            <div class="w-0 h-0 border-t-[20px] border-t-white border-l-[20px]
-              border-l-transparent absolute -bottom-5 left-1/2 -translate-x-1/2"></div>
           </div>
           <p class="mt-6 font-bold text-xl">Service User</p>
         </div>
@@ -313,8 +341,6 @@
             <p class="text-base md:text-lg italic font-semibold">
               "The support workers are kind, patient and understanding. They always go above and beyond."
             </p>
-            <div class="w-0 h-0 border-t-[20px] border-t-white border-l-[20px]
-              border-l-transparent absolute -bottom-5 left-1/2 -translate-x-1/2"></div>
           </div>
           <p class="mt-6 font-bold text-xl">Family Member</p>
         </div>
@@ -324,8 +350,6 @@
             <p class="text-base md:text-lg italic font-semibold">
               "Support that makes a real difference. The team are reliable and genuinely committed."
             </p>
-            <div class="w-0 h-0 border-t-[20px] border-t-white border-l-[20px]
-              border-l-transparent absolute -bottom-5 left-1/2 -translate-x-1/2"></div>
           </div>
           <p class="mt-6 font-bold text-xl">Health Professional</p>
         </div>
@@ -335,8 +359,6 @@
             <p class="text-base md:text-lg italic font-semibold">
               "I feel safe and supported. Yorkshire Rose Care listen to me and help me take positive steps every day."
             </p>
-            <div class="w-0 h-0 border-t-[20px] border-t-white border-l-[20px]
-              border-l-transparent absolute -bottom-5 left-1/2 -translate-x-1/2"></div>
           </div>
           <p class="mt-6 font-bold text-xl">Service User</p>
         </div>
@@ -360,32 +382,44 @@
 
       <div class="partner-card p-8 rounded-2xl bg-[var(--brand-pink)] text-white shadow-xl text-center">
         <h3 class="text-xl md:text-2xl font-bold mb-2">Bradford City Community Foundation</h3>
-        <p class="text-sm opacity-90">Supporting mental wellbeing through inclusive community football programmes.</p>
+        <p class="text-sm opacity-90">
+          Supporting mental wellbeing and inclusion through community football programmes.
+        </p>
       </div>
 
       <div class="partner-card p-8 rounded-2xl bg-[var(--brand-blue)] text-white shadow-xl text-center">
         <h3 class="text-xl md:text-2xl font-bold mb-2">Rugby League Cares</h3>
-        <p class="text-sm opacity-90">Promoting positive mental health through wellbeing initiatives and support networks.</p>
+        <p class="text-sm opacity-90">
+          Promoting positive mental health through wellbeing initiatives and support in rugby communities.
+        </p>
       </div>
 
       <div class="partner-card p-8 rounded-2xl bg-[var(--brand-pink)] text-white shadow-xl text-center">
         <h3 class="text-xl md:text-2xl font-bold mb-2">Mind in Bradford</h3>
-        <p class="text-sm opacity-90">Providing mental health support, crisis assistance and wellbeing activities.</p>
+        <p class="text-sm opacity-90">
+          Providing mental health support, crisis services and wellbeing activities across Bradford.
+        </p>
       </div>
 
       <div class="partner-card p-8 rounded-2xl bg-[var(--brand-blue)] text-white shadow-xl text-center">
         <h3 class="text-xl md:text-2xl font-bold mb-2">Samaritans</h3>
-        <p class="text-sm opacity-90">Offering emotional support to individuals experiencing mental health challenges.</p>
+        <p class="text-sm opacity-90">
+          Offering emotional support to anyone experiencing distress or mental health challenges.
+        </p>
       </div>
 
       <div class="partner-card p-8 rounded-2xl bg-[var(--brand-pink)] text-white shadow-xl text-center">
         <h3 class="text-xl md:text-2xl font-bold mb-2">Andy’s Man Club</h3>
-        <p class="text-sm opacity-90">Creating safe spaces for men to open up, talk and boost mental wellbeing.</p>
+        <p class="text-sm opacity-90">
+          Creating safe spaces for men to talk openly and improve their mental wellbeing.
+        </p>
       </div>
 
       <div class="partner-card p-8 rounded-2xl bg-[var(--brand-blue)] text-white shadow-xl text-center">
         <h3 class="text-xl md:text-2xl font-bold mb-2">Premier League Foundation</h3>
-        <p class="text-sm opacity-90">Promoting confidence and positive mental health through football and inclusion programmes.</p>
+        <p class="text-sm opacity-90">
+          Using football and community programmes to promote inclusion, confidence and positive mental health.
+        </p>
       </div>
 
     </div>
